--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,88 @@
-body {
+html,body,ul,li,ol,dl,dd,dt,p,h1,h2,h3,h4,h5,h6,form,img {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 0.28rem;
 }
 
 #app {
     width: 100%;
     height: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.fs-10 {
+  font-size: 0.2rem;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.contentWrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0.8rem;
+  left: 0;
+  right: 0;
+}
+
+.tabbar {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  box-shadow: 0 -1px 0 0 #ccc;
+  /* background-color: #F5F5F5; */
+}
+
+.navLink {
+  height: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;  
+}
+
+.tabbar .tabbar-item-active {
+  color: #1296db;
+}
+
+.tabbar .img {
+  width: 0.32rem;
+  height: 0.32rem;
+  background-image: url("/src/img/home.png");
+}
+
+.tabbar .img-news {
+  background-image: url("/src/img/news.png");
+}
+
+.tabbar .img-user {
+  background-image: url("/src/img/user.png");
+}
+
+.tabbar .tabbar-item-active .img {
+  background-image: url("/src/img/home-selected.png");
+}
+
+.tabbar .tabbar-item-active .img-news {
+  background-image: url("/src/img/news-selected.png");
+}
+
+.tabbar .tabbar-item-active .img-user {
+  background-image: url("/src/img/user-selected.png");
 }
 
